--- a/app/src/main/res/layout/questions_fragment.xml
+++ b/app/src/main/res/layout/questions_fragment.xml
@@ -9,49 +9,52 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button1"
-        android:layout_width="120dp"
-        android:layout_height="70dp"
+        android:layout_width="340dp"
+        android:layout_height="75dp"
         android:text="Button"
-        app:layout_constraintBottom_toTopOf="@id/button3"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/question"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button2"
+        tools:layout_editor_absoluteY="365dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button2"
-        android:layout_width="120dp"
-        android:layout_height="70dp"
+        android:layout_width="340dp"
+        android:layout_height="75dp"
         android:text="Button"
-        app:layout_constraintBottom_toTopOf="@id/button4"
+        app:layout_constraintBottom_toTopOf="@id/button3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/button1" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button3"
-        android:layout_width="120dp"
-        android:layout_height="70dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@id/nextButton"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="578dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button4"
-        android:layout_width="120dp"
-        android:layout_height="70dp"
+        android:layout_width="340dp"
+        android:layout_height="75dp"
         android:text="Button"
-        app:layout_constraintBottom_toTopOf="@id/nextButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/button3" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button3"
+        android:layout_width="340dp"
+        android:layout_height="75dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/question"
-        android:layout_width="420dp"
-        android:layout_height="320dp"
+        android:layout_width="410dp"
+        android:layout_height="218dp"
         android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="@id/button1"
+        android:text="TEXT"
+        app:layout_constraintBottom_toTopOf="@id/button1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0" />
@@ -69,12 +72,14 @@
         android:id="@+id/questionState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="question,button1,button2,button3,button4" />
+        app:constraint_referenced_ids="question,button1,button2,button3,button4"
+        tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/nextState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="nextButton" />
+        app:constraint_referenced_ids="nextButton"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
