--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,33 +2,42 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:viewportWidth="350.8772"
+    android:viewportHeight="350.8772">
+  <group android:translateX="75.4386"
+      android:translateY="75.4386">
     <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+        android:pathData="M101.09,150.71c-0.81,-3.44 -1.01,-7.09 -1.01,-10.53c0,-21.07 12.97,-40.31 36.46,-40.92c-11.34,-5.06 -21.47,-14.18 -21.47,-26.74c0,-16 12.97,-26.94 25.93,-26.94c9.32,0.2 19.24,5.06 19.24,14.18c0,3.04 -1.22,7.5 -4.05,7.5c-1.22,-0.2 -1.82,-0.61 -1.82,-2.02c0,-1.82 2.23,-5.06 2.23,-7.29c0,-6.48 -8.51,-9.52 -14.18,-10.33c-6.69,0.61 -15.6,14.18 -15.6,27.75c0,10.33 5.47,20.66 21.07,24.72c0.81,0.2 1.01,0.81 1.01,1.62c0,0.81 -0.41,1.82 -1.42,1.82h-0.41c-23.5,0 -32.82,18.03 -32.82,35.65c0,16.81 8.51,33.43 21.68,33.43c29.37,-3.24 38.69,-41.53 49.63,-62.19c0.2,-0.41 0.81,-0.61 1.22,-0.61c1.01,0 1.21,0.81 1.21,1.42v0.4c-9.72,16.61 -21.88,64.63 -55.71,64.63C118.72,176.23 104.74,167.52 101.09,150.71z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="110.9011"
+            android:startX="100.0798"
+            android:endY="110.9011"
+            android:endX="188"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF14002D"/>
+          <item android:offset="0.7132" android:color="#FFF71113"/>
+          <item android:offset="1" android:color="#FFFF5252"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M180.87,36.93c-4.25,0 -3.44,5.87 -5.06,6.28c-3.5,1.37 -8.38,2.05 -14.03,2.31c0.93,0.38 1.85,0.78 2.73,1.27c0.75,0.41 1.47,0.88 2.16,1.38c8.97,-0.7 15.55,-2.66 16.63,-6.98c0.2,-0.81 0.41,-1.42 0.41,-2.02C183.71,37.73 182.9,37.33 180.87,36.93z"
+        android:fillColor="#B70000"/>
+    <path
+        android:pathData="M92.5,91.44l-14.59,0.2c1.62,-20.87 2.63,-37.48 4.86,-50.44c4.85,0.27 18.38,2.14 33.03,3.38c0.81,-0.51 2.25,-1.47 3.79,-2.47c-27.81,-2.16 -56.09,-8.61 -77.34,-8.61c-17.62,0 -28.77,3.65 -29.17,15.6c0,3.44 1.22,4.86 2.84,4.86c3.44,-0.2 4.05,-2.03 4.05,-4.05l-0.2,-3.65c0,-7.29 13.78,-9.32 26.94,-9.32c8.71,0 17.22,0.81 21.68,1.82c-1.82,6.89 -3.04,26.94 -4.66,53.08c-3.85,0 -12.36,0.41 -16,0.61c-0.81,0 -1.22,0.61 -1.22,1.21c0,0.81 0.41,1.42 1.01,1.42c3.65,-0.41 11.95,-0.41 16,-0.61c-0.61,12.36 -1.42,25.93 -1.42,39.3c0,11.75 0.61,23.5 2.23,34.24c0.61,2.43 2.63,3.44 5.27,3.44h1.22c2.84,-0.4 5.67,-2.02 5.67,-4.66c-0.2,-6.69 -0.81,-13.78 -0.81,-22.89c0,-15.8 0.81,-33.63 2.03,-49.43l14.79,-0.2c0.81,0 1.22,-0.61 1.42,-1.22C93.92,92.25 93.51,91.44 92.5,91.44z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="102.4829"
+            android:startX="13.0869"
+            android:endY="102.4829"
+            android:endX="119.6016"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF510000"/>
+          <item android:offset="0.2868" android:color="#FF7C0000"/>
+          <item android:offset="1" android:color="#FFFF1A1A"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
