margin top/bottom button

--- a/app/src/main/res/layout/questions_fragment.xml
+++ b/app/src/main/res/layout/questions_fragment.xml
@@ -28,9 +28,10 @@
         android:id="@+id/button1"
         android:layout_width="250dp"
         android:layout_height="75dp"
+        android:background="@color/grey"
         android:text="Button"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toTopOf="@id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +45,8 @@
         android:layout_width="250dp"
         android:layout_height="75dp"
         android:text="Button"
-        android:layout_marginBottom="5dp"
+        android:background="@color/grey"
+        android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toTopOf="@id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +59,9 @@
         android:id="@+id/button4"
         android:layout_width="250dp"
         android:layout_height="75dp"
+        android:background="@color/grey"
         android:text="Button"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3"
@@ -71,7 +74,8 @@
         android:layout_width="250dp"
         android:layout_height="75dp"
         android:text="Button"
-        android:layout_marginTop="5dp"
+        android:background="@color/grey"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
@@ -89,7 +93,11 @@
         app:cardCornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="8dp"
+        android:stateListAnimator="@null"
+        android:translationZ="8dp"
+        android:layout_marginTop="40dp">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/question"
