--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,18 +2,18 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="350.8772"
-    android:viewportHeight="350.8772">
-  <group android:translateX="75.4386"
-      android:translateY="75.4386">
+    android:viewportWidth="377.3585"
+    android:viewportHeight="377.3585">
+  <group android:translateX="88.679245"
+      android:translateY="88.679245">
     <path
-        android:pathData="M101.09,150.71c-0.81,-3.44 -1.01,-7.09 -1.01,-10.53c0,-21.07 12.97,-40.31 36.46,-40.92c-11.34,-5.06 -21.47,-14.18 -21.47,-26.74c0,-16 12.97,-26.94 25.93,-26.94c9.32,0.2 19.24,5.06 19.24,14.18c0,3.04 -1.22,7.5 -4.05,7.5c-1.22,-0.2 -1.82,-0.61 -1.82,-2.02c0,-1.82 2.23,-5.06 2.23,-7.29c0,-6.48 -8.51,-9.52 -14.18,-10.33c-6.69,0.61 -15.6,14.18 -15.6,27.75c0,10.33 5.47,20.66 21.07,24.72c0.81,0.2 1.01,0.81 1.01,1.62c0,0.81 -0.41,1.82 -1.42,1.82h-0.41c-23.5,0 -32.82,18.03 -32.82,35.65c0,16.81 8.51,33.43 21.68,33.43c29.37,-3.24 38.69,-41.53 49.63,-62.19c0.2,-0.41 0.81,-0.61 1.22,-0.61c1.01,0 1.21,0.81 1.21,1.42v0.4c-9.72,16.61 -21.88,64.63 -55.71,64.63C118.72,176.23 104.74,167.52 101.09,150.71z">
+        android:pathData="M129.49,177.23c-13.85,0 -29.68,-8.54 -33.82,-27.62c-0.71,-3.03 -1.06,-6.51 -1.06,-10.87c0,-11.16 3.51,-21.58 9.89,-29.34c4.35,-5.3 9.77,-9.12 16.02,-11.37c-7.65,-6.18 -11.87,-14.07 -11.87,-22.7c0,-18.49 15.05,-29.94 28.99,-29.94l0.1,0c11.24,0.25 22.62,6.5 22.62,17.98c0,5.82 -2.91,11.71 -8.48,11.71h-0.39l-0.38,-0.06c-3.52,-0.59 -5.63,-3.02 -5.63,-6.52c0,-1.76 0.68,-3.37 1.34,-4.92c0.25,-0.6 0.67,-1.58 0.75,-1.99c-0.1,-2.15 -4.37,-4.12 -8.57,-4.86c-3.14,1 -9.97,10.38 -9.97,21.26c0,6.57 2.82,15.14 16.24,18.63c2.13,0.54 4.46,2.41 4.46,6.05c0,3.58 -2.64,6.39 -6.01,6.39h-0.38c-19.22,0 -26.07,14.84 -26.07,28.73c0,12.75 6.17,26.4 15.39,26.64c18.91,-2.28 28.02,-23.19 36.07,-41.66c2.22,-5.1 4.32,-9.92 6.54,-14.1c0.97,-1.88 3.04,-3.09 5.3,-3.09c3.32,0 5.82,2.59 5.82,6.01v1.65l-0.64,1.1c-1.78,3.04 -3.73,7.45 -5.98,12.56C170.93,146.95 157.58,177.23 129.49,177.23z">
       <aapt:attr name="android:fillColor">
         <gradient 
-            android:startY="110.9011"
-            android:startX="100.0798"
-            android:endY="110.9011"
-            android:endX="188"
+            android:startY="111.3181"
+            android:startX="94.6164"
+            android:endY="111.3181"
+            android:endX="186.3874"
             android:type="linear">
           <item android:offset="0" android:color="#FF14002D"/>
           <item android:offset="0.7132" android:color="#FFF71113"/>
@@ -22,16 +22,16 @@
       </aapt:attr>
     </path>
     <path
-        android:pathData="M180.87,36.93c-4.25,0 -3.44,5.87 -5.06,6.28c-3.5,1.37 -8.38,2.05 -14.03,2.31c0.93,0.38 1.85,0.78 2.73,1.27c0.75,0.41 1.47,0.88 2.16,1.38c8.97,-0.7 15.55,-2.66 16.63,-6.98c0.2,-0.81 0.41,-1.42 0.41,-2.02C183.71,37.73 182.9,37.33 180.87,36.93z"
+        android:pathData="M164.61,47.02c-0.57,-0.41 -1.08,-0.73 -1.54,-0.98c-0.56,-0.31 -1.21,-0.6 -2.09,-0.96l-13.95,-5.83c5.62,-0.94 23.16,-3.84 25.64,-4.54c0.67,-2.15 2.47,-6.71 7.97,-6.71h0.46l0.45,0.09c4.26,0.85 6.43,3.1 6.43,6.68c0,1.05 -0.23,1.93 -0.41,2.63l-0.1,0.4c-1.95,7.81 -12.22,9.49 -19.77,10.08l-1.7,0.13L164.61,47.02z"
         android:fillColor="#B70000"/>
     <path
-        android:pathData="M92.5,91.44l-14.59,0.2c1.62,-20.87 2.63,-37.48 4.86,-50.44c4.85,0.27 18.38,2.14 33.03,3.38c0.81,-0.51 2.25,-1.47 3.79,-2.47c-27.81,-2.16 -56.09,-8.61 -77.34,-8.61c-17.62,0 -28.77,3.65 -29.17,15.6c0,3.44 1.22,4.86 2.84,4.86c3.44,-0.2 4.05,-2.03 4.05,-4.05l-0.2,-3.65c0,-7.29 13.78,-9.32 26.94,-9.32c8.71,0 17.22,0.81 21.68,1.82c-1.82,6.89 -3.04,26.94 -4.66,53.08c-3.85,0 -12.36,0.41 -16,0.61c-0.81,0 -1.22,0.61 -1.22,1.21c0,0.81 0.41,1.42 1.01,1.42c3.65,-0.41 11.95,-0.41 16,-0.61c-0.61,12.36 -1.42,25.93 -1.42,39.3c0,11.75 0.61,23.5 2.23,34.24c0.61,2.43 2.63,3.44 5.27,3.44h1.22c2.84,-0.4 5.67,-2.02 5.67,-4.66c-0.2,-6.69 -0.81,-13.78 -0.81,-22.89c0,-15.8 0.81,-33.63 2.03,-49.43l14.79,-0.2c0.81,0 1.22,-0.61 1.42,-1.22C93.92,92.25 93.51,91.44 92.5,91.44z">
+        android:pathData="M67.74,171.76c-4.88,0 -8.42,-2.53 -9.48,-6.78l-0.05,-0.22l-0.03,-0.22c-1.42,-9.41 -2.14,-20.44 -2.14,-32.79c0,-10.76 0.54,-21.44 1.07,-31.76l0.01,-0.23c-0.13,0 -0.25,0.01 -0.38,0.01c-3.38,0.08 -7.21,0.16 -9.16,0.38l-0.26,0.03h-0.26c-3.16,0 -5.63,-2.64 -5.63,-6.02c0,-3.21 2.47,-5.73 5.65,-5.82c1.96,-0.11 6.73,-0.35 10.76,-0.48c1.15,-18.57 2.08,-32.97 3.29,-41.31C57.26,46.07 52,45.7 46.29,45.7c-16.43,0 -20.4,3.28 -20.56,4.01l0.18,3.33v0.13c0,5 -3.07,8.17 -8.21,8.48l-0.14,0.01h-0.14c-3.39,0 -7.34,-2.42 -7.34,-9.24l0,-0.16C10.74,33.1 33.53,33.1 42.11,33.1c11.55,0 25.04,1.94 39.33,4c10.96,1.58 12.92,2.27 24.15,3.15l13.9,1.08l-6.57,2.37c-3.57,2.05 -4.87,3.55 -5.45,3.93c-0.69,0.45 -2.9,3.32 -3.32,3.58l-1.32,0.82l-1.55,-0.13c-7.66,-0.64 -5.55,-0.53 -11.38,-1.19c-2.21,-0.25 -4.19,-0.47 -5.86,-0.65c-1.31,9.15 -2.13,20.08 -3.14,33.43c-0.1,1.32 -0.2,2.66 -0.3,4.03l8.54,-0.12c3.49,0 6.08,2.67 6.08,6.2v0.76l-0.24,0.72c-0.89,2.68 -3.1,4.35 -5.78,4.35l-9.5,0.13c-1.02,14.45 -1.57,29.1 -1.57,41.7c0,5.42 0.23,9.98 0.45,14.4c0.12,2.4 0.24,4.66 0.3,6.92l0,0.14c0,4.59 -3.75,8.21 -9.34,9l-0.33,0.05H67.74z">
       <aapt:attr name="android:fillColor">
         <gradient 
-            android:startY="102.4829"
-            android:startX="13.0869"
-            android:endY="102.4829"
-            android:endX="119.6016"
+            android:startY="102.4285"
+            android:startX="10.0869"
+            android:endY="102.4285"
+            android:endX="119.4857"
             android:type="linear">
           <item android:offset="0" android:color="#FF510000"/>
           <item android:offset="0.2868" android:color="#FF7C0000"/>
