--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#808080"/>
-    <stroke android:width="3dp" android:color="#B1BCBE" />
-    <corners android:radius="20dp"/>
-    <padding android:left="0dp" android:top="0dp"
-        android:right="0dp" android:bottom="0dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <layer-list>
+            <item android:right="5dp" android:top="5dp">
+                <shape>
+                    <corners android:radius="1dp" />
+                    <solid android:color="#D6D6D6" />
+                </shape>
+            </item>
+            <item android:bottom="1dp" android:left="1dp">
+                <shape>
+                    <gradient android:angle="270"
+                        android:endColor="#FFFFFF" android:startColor="#FFFFFF" />
+                    <stroke android:width="1dp" android:color="#95989A" />
+                    <corners android:radius="2dp" />
+                    <padding android:bottom="10dp" android:left="10dp"
+                        android:right="10dp" android:top="10dp" />
+                </shape>
+            </item>
+        </layer-list>
+    </item>
+</selector>
