--- a/app/src/main/res/layout/test_result_fragment.xml
+++ b/app/src/main/res/layout/test_result_fragment.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/score" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/doneButton"
         android:layout_height="70dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
