--- a/app/src/main/res/layout/test_result_fragment.xml
+++ b/app/src/main/res/layout/test_result_fragment.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="320dp"
-        android:text="9/10"
+        android:text=""
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
