DB queries have been added

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,23 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00E02626">
 
        <Button
-        android:id="@+id/startTestButton"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_marginBottom="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:background="#C51D51"
-        android:text="@string/take_the_test"
-        android:textColor="#FFFFFF"
-        android:textSize="19sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+           android:id="@+id/startTestButton"
+           android:layout_width="match_parent"
+           android:layout_height="65dp"
+           android:background="#C51D51"
+           android:text="@string/take_the_test"
+           android:textColor="#FFFFFF"
+           android:textSize="19sp"
+           android:layout_margin="25dp"
+           app:layout_constraintBottom_toBottomOf="parent" />
+
+
+       <TextView
+           android:id="@+id/words_in_db"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="20dp"
+           android:text="/ 12407"
+           android:textSize="22pt"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintHorizontal_bias="0.5"
+           app:layout_constraintStart_toEndOf="@+id/user_vocabulary"
+           app:layout_constraintTop_toBottomOf="@+id/my_total_progress_textView" />
+
+       <TextView
+           android:id="@+id/user_vocabulary"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="20dp"
+           android:text="375"
+           android:textColor="#B70000"
+           android:textSize="22pt"
+           app:layout_constraintEnd_toStartOf="@+id/words_in_db"
+           app:layout_constraintHorizontal_chainStyle="packed"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/my_total_progress_textView" />
+
+       <TextView
+           android:id="@+id/my_total_progress_textView"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="40dp"
+           android:text="@string/my_total_progress"
+           android:textColor="#000000"
+           android:textSize="24sp"
+           android:textStyle="bold"
+           app:layout_constraintHorizontal_chainStyle="packed"
+           app:layout_constraintStart_toStartOf="@+id/user_vocabulary"
+           app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
