--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -23,7 +23,6 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
-           android:text="/ 12407"
            android:textSize="22pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
@@ -49,6 +48,7 @@
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/my_total_progress"
+           tools:text=""
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
