--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -24,6 +24,7 @@
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22pt"
+           tools:text="/100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_vocabulary"
@@ -34,7 +35,7 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
-           android:text="375"
+           tools:text="0"
            android:textColor="#B70000"
            android:textSize="22pt"
            app:layout_constraintEnd_toStartOf="@+id/words_in_db"
@@ -48,7 +49,6 @@
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/my_total_progress"
-           tools:text=""
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
