DB queries have been added

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -52,8 +52,8 @@
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
-           app:layout_constraintHorizontal_chainStyle="packed"
-           app:layout_constraintStart_toStartOf="@+id/user_vocabulary"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
