added word of the day

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -21,4 +21,52 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+       <androidx.cardview.widget.CardView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="32dp"
+           android:layout_marginEnd="32dp"
+           app:layout_constraintBottom_toTopOf="@+id/startTestButton"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toTopOf="parent"
+           tools:ignore="MissingConstraints">
+
+              <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_gravity="center"
+                  android:layout_marginBottom="15dp"
+                  android:elevation="6dp"
+                  android:orientation="vertical"
+                  android:padding="15dp"
+                  android:stateListAnimator="@null"
+                  android:translationZ="6dp"
+                  app:layout_constraintEnd_toEndOf="parent"
+                  app:layout_constraintStart_toStartOf="parent"
+                  app:layout_constraintVertical_bias="1.0">
+
+                     <TextView
+                         android:id="@+id/day_word"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text=""
+                         android:textSize="24sp"
+                         android:layout_gravity="center"
+                         android:textStyle="bold" />
+
+
+                     <TextView
+                         android:id="@+id/example"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="25dp"
+                         android:text="example"
+                         android:layout_gravity="center"
+                         android:textSize="24sp"
+                         android:textStyle="italic" />
+              </LinearLayout>
+
+       </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
