words in progress statistic added

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,12 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00E02626">
-
     <Button
-        android:id="@+id/startTestButton"
-        android:layout_width="match_parent"
+        android:id="@+id/checkStatsBtn"
+        android:layout_width="0dp"
         android:layout_height="65dp"
         android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:background="#FFFFFF"
+        android:text="@string/stats"
+        android:textColor="#F10606"
+        android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/startTestButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/user_vocabulary"
+        app:layout_constraintVertical_bias="1.0"/>
+    <Button
+        android:id="@+id/startTestButton"
+        android:layout_width="0dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="8dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:background="#FFFFFF"
@@ -19,7 +34,7 @@
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/checkStatsBtn"
         app:layout_constraintTop_toBottomOf="@id/user_vocabulary"
         app:layout_constraintVertical_bias="1.0"/>
 
