--- a/app/src/main/res/layout/questions_fragment.xml
+++ b/app/src/main/res/layout/questions_fragment.xml
@@ -114,15 +114,13 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_gravity="center"
+        android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="120dp"
         android:layout_marginEnd="50dp"
         android:elevation="8dp"
         android:stateListAnimator="@null"
         android:translationZ="8dp"
-
         app:cardCornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,6 +132,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="TEXT"
+            android:layout_margin="20dp"
             android:textAllCaps="true"
             android:textColor="#000000"
             android:textSize="25sp"
